k8s/infra/controllers/argocd/grpc-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-api
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - argocd.lab.schaermu.ch
  rules:
    - backendRefs:
        - name: argocd-server-grpc
          port: 80
      matches:
        - headers:
            - name: Content-Type
              value: application/grpc
