k8s/infra/controllers/argocd/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: cillium-gateway
    namespace: gateway
  hostnames:
  - "argocd.lab.schaermu.ch"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
spec:
  parentRefs:
  - name: cillium-gateway
    namespace: gateway
  hostnames:
  - "argocd.lab.schaermu.ch"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
